--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,11 +22,11 @@ body {
 }
 
 /* NavBar */
-
 .nav {
     height: 10vh;
 }
 
+/* Index */
 .jumbotron {
     background: url("https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/hero+(3).webp") no-repeat center center fixed;
     background-size: cover;
@@ -53,6 +53,7 @@ body {
     padding-top: 7px;
 }
 
+/* Logo */
 .logo {
     height: 80px;
     width: 80px;
@@ -109,7 +110,7 @@ body {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
-  }
+}
 
 /* from Bulma */
 .icon {
@@ -128,6 +129,7 @@ body {
     width: fit-content;
 }
 
+/* Buttons */
 .shop-now-button {
     background: var(--main-color-sec);
     color: white;
@@ -172,18 +174,6 @@ body {
     color: white !important;
 }
 
-
-.icon-dark {
-    color: var(--text-main);
-}
-
-.icon-dark:hover,
-.icon-dark:active,
-.icon-dark:focus {
-    color: var(--main-color-sec);
-}
-
-
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -192,6 +182,17 @@ body {
 .btn-green:focus {
     background: var(--block-main);
     color: black;
+}
+
+/* Font Awesome Icons */
+.icon-dark {
+    color: var(--text-main);
+}
+
+.icon-dark:hover,
+.icon-dark:active,
+.icon-dark:focus {
+    color: var(--main-color-sec);
 }
 
 .text-main {
@@ -216,13 +217,13 @@ body {
     z-index: -1;
 }
 
-a.category-badge > span.badge {
+a.category-badge>span.badge {
     background-color: var(--main-color-sec);
     color: #fff;
     border: #000;
 }
 
-a.category-badge > span.badge:hover {
+a.category-badge>span.badge:hover {
     background: var(--main-color);
 }
 
@@ -244,10 +245,11 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/* Allauth */
 .allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-	/* btn */
-	display: inline-block;
+    /* btn */
+    display: inline-block;
     font-weight: 400;
     color: #fff;
     text-align: center;
@@ -264,18 +266,19 @@ input[name='q']::placeholder {
     border-radius: 0;
 
     /* standard bootstrap btn transitions */
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .allauth-form-inner-content button:hover,
 .allauth-form-inner-content input[type='submit']:hover {
-	color: #fff;
+    color: #fff;
     background-color: #222;
     border-color: #222;
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+    color: #17a2b8;
+    /* text-info */
 }
 
 
@@ -303,7 +306,6 @@ input[name='q']::placeholder {
 }
 
 /* Product Card */
-
 .product-card {
     background-color: var(--main-color);
     color: var(--text-main);
@@ -315,7 +317,6 @@ input[name='q']::placeholder {
     border-radius: 5px;
     padding: 1px;
     margin: 2px;
-
 }
 
 .product-card-block-red {
@@ -337,9 +338,9 @@ input[name='q']::placeholder {
 /* Allauth form */
 
 .allauth-form-inner-content {
-margin-top: 70px;
-margin-bottom: 70px;
-min-height: 40vh;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    min-height: 40vh;
 }
 
 .allauth-form-inner-content p {
@@ -361,7 +362,6 @@ min-height: 40vh;
 }
 
 /* Footer */
-
 .footer-div {
     background-color: var(--main-color);
     min-height: 50vh;
@@ -370,27 +370,28 @@ min-height: 40vh;
     left: 0;
 }
 
-footer > .text-small {
+footer>.text-small {
     font-size: 0.9rem;
 }
 
-footer > a {
+footer>a {
     color: var(--block-main);
     text-decoration: none;
     transition: all 0.3s;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-footer > a:hover, a:focus {
+footer>a:hover,
+a:focus {
     color: var(--main-color-sec);
 }
 
-footer > .form-control {
+footer>.form-control {
     background: #212529;
     border-color: #545454;
 }
 
-footer > .form-control:focus {
+footer>.form-control:focus {
     background: #212529;
 }
 
@@ -404,7 +405,6 @@ footer {
 }
 
 /* Product Form */
-
 .btn-file {
     position: relative;
     overflow: hidden;
@@ -432,12 +432,11 @@ footer {
 }
 
 /*  Media Queries */
-
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-  .container {
-    max-width: 80%;
-  }
+    .container {
+        max-width: 80%;
+    }
 }
 
 /* fixed top navbar only on medium and up */
@@ -497,7 +496,8 @@ footer {
         font-size: .75rem;
     }
 
-    .increment-qty, .decrement-qty {
+    .increment-qty,
+    .decrement-qty {
         padding: .25rem .5rem !important;
     }
 }
@@ -509,12 +509,12 @@ footer {
         width: auto;
     }
 
-    .jumbotron-content > h1 {
+    .jumbotron-content>h1 {
         font-size: 1.5rem;
         padding-top: 10px;
     }
 
-    .jumbotron-content > p {
+    .jumbotron-content>p {
         font-size: 0.7rem;
         padding-top: 10px;
     }
@@ -533,4 +533,3 @@ footer {
     }
 
 }
-
